--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.5.2",
     "sweetalert2": "^11.4.32",
     "web-vitals": "^2.1.4"
   },
